--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^5.0.3",
         "vite": "^4.0.0"
     }
 }
